updated content descriptions, fixed alignments (#6)

--- a/src/app/PAGES/home/home.component.scss
+++ b/src/app/PAGES/home/home.component.scss
@@ -15,17 +15,17 @@
       padding-left: 25px;
 
       .title {
-        font-size: 72px;
-        line-height: 60pt;
+        font-size: 62px;
+        line-height: 50pt;
         font-weight: bold;
   
-        .title-name {
-          color: var(--primary-color);
-        }
+        // .title-name {
+        //   color: var(--primary-color);
+        // }
       }
   
       .description {
-        font-size: 27px;
+        font-size: 25px;
         font-weight: 600;
       }
     }
