--- a/src/app/PAGES/single-project/single-project.component.scss
+++ b/src/app/PAGES/single-project/single-project.component.scss
@@ -59,6 +59,10 @@
     }
   }
 
+  .contribution {
+    padding: 0 100px;
+  }
+
   .link {
     display: flex;
     align-items: center;
